--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "percentile": "^1.2.0",
     "simple-statistics": "^5.0.0",
     "winston": "^2.4.0"
+  },
+  "scripts": {
+    "postinstall": "webpack"
   }
 }
